fixing overflow

--- a/css/nav.css
+++ b/css/nav.css
@@ -46,7 +46,7 @@ nav {
 }
 
 @media screen and (max-width:768px) {
-    body, html {
+    html {
         position: relative;
         overflow-x: hidden;
         height: 100vh;
